tensorflow: version 1.4 updates

--- a/notebooks/example_sequence.ipynb
+++ b/notebooks/example_sequence.ipynb
@@ -35,14 +35,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'make_example' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-f24aed206a43>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mwriter\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpython_io\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTFRecordWriter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0msequence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_sequence\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequences\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_sequences\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m         \u001b[0mex\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mmake_example\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msequence\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_sequence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m         \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSerializeToString\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0mwriter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'make_example' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote to /var/folders/r6/0pcqbs655t19b_392h5m3x4c0000gn/T/tmp63eh58pk\n"
      ]
     }
    ],
@@ -54,7 +50,7 @@
     "    # The object we return\n",
     "    ex= tf.train.SequenceExample() \n",
     "    # A non-sequential feature of our example\n",
-    "    sequence_lenght=len(sequences)\n",
+    "    sequence_length=len(sequences)\n",
     "    ex.context.feature['length'].int64_list.value.append(sequence_length)\n",
     "    #Feature lists for the two sequential feature of our example\n",
     "    f1_tokens= ex.feature_lists.feature_list['tokens']\n",
@@ -79,7 +75,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tf.reset_default_graph()\n",
+    "\n",
+    "# A single serialized example\n",
+    "#(You can read this from a file using TFRecordReader)\n",
+    "ex= make_example([1, 2, 3], [0, 1, 0]).SerializeToString() \n",
+    "\n",
+    "#Define how to parse the example\n",
+    "context_features= {\n",
+    "    'length': tf.FixedLenFeature([], dtype=tf.int64)\n",
+    "}\n",
+    "sequence_features= {\n",
+    "    'tokens': tf.FixedLenSequenceFeature([], dtype=tf.int64),\n",
+    "    'labels': tf.FixedLenSequenceFeature([], dtype=tf.int64)\n",
+    "}\n",
+    "\n",
+    "#Parse the example (returns a dictionary of tensors)\n",
+    "context_parsed, sequence_parsed= tf.parse_single_sequence_example(\n",
+    "    serialized=ex,\n",
+    "    context_features=context_features,\n",
+    "    sequence_features=sequence_features\n",
+    ")\n",
+    "context= tf.contrib.learn.run_n(context_parsed, n=1, )"
+   ]
   }
  ],
  "metadata": {
