--- a/notebooks/example_sequence.ipynb
+++ b/notebooks/example_sequence.ipynb
@@ -11,25 +11,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import tempfile"
+    "\n",
+    "tfrecords_filename= 'sequence_examples.tfrecords'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to /var/folders/r6/0pcqbs655t19b_392h5m3x4c0000gn/T/tmpw23faeuy\n"
+      "b'\\n\\x11\\n\\x0f\\n\\x06length\\x12\\x05\\x1a\\x03\\n\\x01\\x03\\x12B\\n\\x1f\\n\\x06tokens\\x12\\x15\\n\\x05\\x1a\\x03\\n\\x01\\x01\\n\\x05\\x1a\\x03\\n\\x01\\x02\\n\\x05\\x1a\\x03\\n\\x01\\x03\\n\\x1f\\n\\x06labels\\x12\\x15\\n\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x05\\x1a\\x03\\n\\x01\\x01\\n\\x05\\x1a\\x03\\n\\x01\\x00'\n",
+      "b'\\n\\x11\\n\\x0f\\n\\x06length\\x12\\x05\\x1a\\x03\\n\\x01\\x03\\x12B\\n\\x1f\\n\\x06tokens\\x12\\x15\\n\\x05\\x1a\\x03\\n\\x01\\x04\\n\\x05\\x1a\\x03\\n\\x01\\x05\\n\\x05\\x1a\\x03\\n\\x01\\x01\\n\\x1f\\n\\x06labels\\x12\\x15\\n\\x05\\x1a\\x03\\n\\x01\\x01\\n\\x05\\x1a\\x03\\n\\x01\\x00\\n\\x05\\x1a\\x03\\n\\x01\\x00'\n",
+      "b'\\n\\x11\\n\\x0f\\n\\x06length\\x12\\x05\\x1a\\x03\\n\\x01\\x02\\x124\\n\\x18\\n\\x06tokens\\x12\\x0e\\n\\x05\\x1a\\x03\\n\\x01\\x01\\n\\x05\\x1a\\x03\\n\\x01\\x02\\n\\x18\\n\\x06labels\\x12\\x0e\\n\\x05\\x1a\\x03\\n\\x01\\x01\\n\\x05\\x1a\\x03\\n\\x01\\x01'\n",
+      "Wrote to sequence_examples.tfrecords\n"
      ]
     }
    ],
@@ -52,31 +56,70 @@
     "    return ex\n",
     "\n",
     "#Write all examples into a TFRecords file\n",
-    "with tempfile.NamedTemporaryFile() as fp:\n",
-    "    writer= tf.python_io.TFRecordWriter(fp.name)\n",
+    "with open(tfrecords_filename) as f:\n",
+    "    writer= tf.python_io.TFRecordWriter(f.name)\n",
     "    for sequence, label_sequence in zip(sequences, label_sequences):\n",
     "        ex= make_example(sequence, label_sequence)\n",
-    "        writer.write(ex.SerializeToString())\n",
+    "        print(ex.SerializeToString())\n",
+    "        writer.write(ex.SerializeToString())        \n",
     "    writer.close()\n",
-    "    print('Wrote to {}'.format(fp.name))\n"
+    "    print('Wrote to {}'.format(f.name))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-3-81408ba549a4>:22: run_n (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
+      "3\n",
+      "0\n",
+      "1\n",
+      "3\n",
+      "1\n",
+      "4\n",
+      "2\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#reading back\n",
+    "record_iterator = tf.python_io.tf_record_iterator(path=tfrecords_filename)\n",
+    "\n",
+    "for string_record in record_iterator:\n",
+    "    ex = tf.train.SequenceExample()\n",
+    "    ex.ParseFromString(string_record)\n",
+    "#     print(ex)\n",
+    "    #Length of the sequence\n",
+    "    print(ex.context.feature['length'].int64_list.value[0])\n",
+    "    #First element of every label\n",
+    "    print(ex.feature_lists.feature_list['labels'].feature[0].int64_list.value[0])\n",
+    "    #Last element of every token\n",
+    "    print(ex.feature_lists.feature_list['tokens'].feature[0].int64_list.value[-1])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-6-31e038e549f9>:22: run_n (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
       "Instructions for updating:\n",
       "graph_actions.py will be deleted. Use tf.train.* utilities instead. You can use learn/estimators/estimator.py as an example.\n",
-      "WARNING:tensorflow:From /Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/graph_actions.py:644: run_feeds (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
+      "WARNING:tensorflow:From /Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/graph_actions.py:644: run_feeds (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
       "Instructions for updating:\n",
       "graph_actions.py will be deleted. Use tf.train.* utilities instead. You can use learn/estimators/estimator.py as an example.\n",
-      "WARNING:tensorflow:From /Users/guilhermevarela/anaconda/envs/tensorflow/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/graph_actions.py:702: run_feeds_iter (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
+      "WARNING:tensorflow:From /Users/Varela/anaconda/envs/tensorflow/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/graph_actions.py:702: run_feeds_iter (from tensorflow.contrib.learn.python.learn.graph_actions) is deprecated and will be removed after 2017-02-15.\n",
       "Instructions for updating:\n",
       "graph_actions.py will be deleted. Use tf.train.* utilities instead. You can use learn/estimators/estimator.py as an example.\n"
      ]
@@ -105,6 +148,52 @@
     "    sequence_features=sequence_features\n",
     ")\n",
     "context= tf.contrib.learn.run_n(context_parsed, n=1, )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'length': <tf.Tensor 'ParseSingleSequenceExample_8/ParseSingleSequenceExample:0' shape=() dtype=int64>}\n",
+      "{'labels': <tf.Tensor 'ParseSingleSequenceExample_8/ParseSingleSequenceExample:1' shape=(?,) dtype=int64>, 'tokens': <tf.Tensor 'ParseSingleSequenceExample_8/ParseSingleSequenceExample:2' shape=(?,) dtype=int64>}\n",
+      "{'length': <tf.Tensor 'ParseSingleSequenceExample_9/ParseSingleSequenceExample:0' shape=() dtype=int64>}\n",
+      "{'labels': <tf.Tensor 'ParseSingleSequenceExample_9/ParseSingleSequenceExample:1' shape=(?,) dtype=int64>, 'tokens': <tf.Tensor 'ParseSingleSequenceExample_9/ParseSingleSequenceExample:2' shape=(?,) dtype=int64>}\n",
+      "{'length': <tf.Tensor 'ParseSingleSequenceExample_10/ParseSingleSequenceExample:0' shape=() dtype=int64>}\n",
+      "{'labels': <tf.Tensor 'ParseSingleSequenceExample_10/ParseSingleSequenceExample:1' shape=(?,) dtype=int64>, 'tokens': <tf.Tensor 'ParseSingleSequenceExample_10/ParseSingleSequenceExample:2' shape=(?,) dtype=int64>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#reading back\n",
+    "record_iterator = tf.python_io.tf_record_iterator(path=tfrecords_filename)\n",
+    "\n",
+    "#Define how to parse the example\n",
+    "context_features= {\n",
+    "    'length': tf.FixedLenFeature([], dtype=tf.int64)\n",
+    "}\n",
+    "sequence_features= {\n",
+    "    'tokens': tf.FixedLenSequenceFeature([], dtype=tf.int64),\n",
+    "    'labels': tf.FixedLenSequenceFeature([], dtype=tf.int64)\n",
+    "}\n",
+    "\n",
+    "for string_record in record_iterator:\n",
+    "#     ex= tf.train.SequenceExample()\n",
+    "#     ex.ParseFromString(string_record)\n",
+    "    \n",
+    "    #Parse the example (returns a dictionary of tensors)\n",
+    "    context_parsed, sequence_parsed= tf.parse_single_sequence_example(\n",
+    "        serialized=string_record,\n",
+    "        context_features=context_features,\n",
+    "        sequence_features=sequence_features\n",
+    "    )\n",
+    "#     import code; code.interact(local=dict(globals(), **locals()))\n",
+    "    print(context_parsed)\n",
+    "    print(sequence_parsed)"
    ]
   },
   {
